# rapidstream-cookbook

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  regression_test.sh
.github/workflows/: pre-commit.yaml
benchmarks/cnn13x12/: run.py
benchmarks/sextans_sparse_matrix_multiplication/: run.py
benchmarks/vitis_flow/: README.md
benchmarks/vivado_flow/: README.md
common/tcl/: hls2rtl.tcl  rtl2cl.tcl  (+2 more)
getting_started/: README.md
getting_started/mixed_sources/: BUILD.bazel  Makefile  README.md  run.py
getting_started/mixed_sources/design/hls/: Add.v  Add_Add_Pipeline_VITIS_LOOP_30_1.v  Add_fadd_32ns_32ns_32_7_full_dsp_1.v  Add_flow_control_loop_pipe_sequential_init.v  Mmap2Stream.v  Mmap2Stream_Mmap2Stream_Pipeline_VITIS_LOOP_18_1.v  Mmap2Stream_flow_control_loop_pipe_sequential_init.v  Mmap2Stream_mmap_m_axi.v  Stream2Mmap.v  Stream2Mmap_Stream2Mmap_Pipeline_VITIS_LOOP_22_1.v  Stream2Mmap_flow_control_loop_pipe_sequential_init.v  Stream2Mmap_mmap_m_axi.v  VecAdd.cpp  VecAdd_control_s_axi.v
getting_started/mixed_sources/design/ip/: Add_fadd_32ns_32ns_32_7_full_dsp_1_ip.xci
getting_started/mixed_sources/design/report/: Add_Pipeline_VITIS_LOOP_30_1_csynth.xml  Add_csynth.xml  Mmap2Stream_Pipeline_VITIS_LOOP_18_1_csynth.xml  Mmap2Stream_csynth.xml  Stream2Mmap_Pipeline_VITIS_LOOP_22_1_csynth.xml  Stream2Mmap_csynth.xml  VecAdd_csynth.xml
getting_started/mixed_sources/design/rtl/: VecAdd.v  VecAddMix.v  VecAdd_fsm.v  fifo.v  sync_fifo.v
getting_started/mixed_sources/design/xci/ip/design_1_proc_sys_reset_0_0/: design_1_proc_sys_reset_0_0.xci
(+3240 files in other folders)
