# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.  All rights reserved.
# The contributor(s) of this file has/have agreed to the RapidStream Contributor License Agreement.

genrule(
    name = "make_all",
    srcs = ["Makefile"],
    outs = ["build.json"],
    cmd = """
        (cd $$(dirname $(SRCS)) && make all) && \
        mkdir -p $$(dirname $(OUTS)) && \
        echo cp $$(dirname $(SRCS))/build/build.json $(OUTS) && \
        cp $$(dirname $(SRCS))/build/build.json $(OUTS)
    """,
    tags = ["local"],
)
